# groundgrid

./: .gitignore  CMakeLists.txt  README.md
cpp/cmake/: CompilerOptions.cmake  dependencies.cmake
cpp/groundgrid/: GridMap.h  GridMapConfig.h  GridMapiterations.h  GroundGrid.h  GroundGridNodelet.cpp  GroundSegmentation.cpp  GroundSegmentation.h  config.toml  iterations.h  kitti_data_publisher.cpp  main.cpp  pcl_point_types.h  point_types.h  segment.conf  test.cpp  test.h
python/: CMakeLists.txt  groundgrid_ext.cpp  main.py
